[package]
name = "jvenv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.2.7", features = ["derive"] }
dialoguer = "0.10.4"
indicatif = "0.17.3"
is_executable = "1.0.1"
which = "4.4.0"
walkdir = "2.3.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.10.4"
